--- a/index.html
+++ b/index.html
@@ -5,43 +5,44 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculadora - @henriquegomesteixeira</title>
+  <title>Basic Calculator - @henriquegomesteixeira</title>
+  <link rel="icon" type="image/x-icon" href="image/apple-calculator.png">
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <div class="bloco">
-    <div class="calculadora">
+  <div class="block">
+    <div class="calculator">
       <main>
-        <input class="resultado" type="text" placeholder="0" readonly="true">
+        <input class="result" type="text" placeholder="0" readonly="true">
         <div>
-          <button class="padrão inicial clear">AC</button>
-          <button class="padrão inicial trocaSinal">+/-</button>
-          <button class="padrão inicial porcentagem">%</button>
-          <button class="padrão inicial laranja sinal divisao">÷</button>
+          <button class="default-key top-key delete-button">AC</button>
+          <button class="default-key top-key sign-exchange">+/-</button>
+          <button class="default-key top-key percentage">%</button>
+          <button class="default-key top-key orange-button division">÷</button>
         </div>
         <div>
-          <button class="padrão" value="7">7</button>
-          <button class="padrão" value="8">8</button>
-          <button class="padrão" value="9">9</button>
-          <button class="padrão laranja sinal multiplicacao">x</button>
+          <button class="default-key" value="7">7</button>
+          <button class="default-key" value="8">8</button>
+          <button class="default-key" value="9">9</button>
+          <button class="default-key orange-button multiplication">x</button>
         </div>
         <div>
-          <button class="padrão" value="4">4</button>
-          <button class="padrão" value="5">5</button>
-          <button class="padrão" value="6">6</button>
-          <button class="padrão laranja sinal subtracao">-</button>
+          <button class="default-key" value="4">4</button>
+          <button class="default-key" value="5">5</button>
+          <button class="default-key" value="6">6</button>
+          <button class="default-key orange-button subtraction">-</button>
         </div>
         <div>
-          <button class="padrão" value="1">1</button>
-          <button class="padrão" value="2">2</button>
-          <button class="padrão" value="3">3</button>
-          <button class="padrão laranja sinal adicao">+</button>
+          <button class="default-key" value="1">1</button>
+          <button class="default-key" value="2">2</button>
+          <button class="default-key" value="3">3</button>
+          <button class="default-key orange-button addition">+</button>
         </div>
         <div>
-          <button class="padrão zero" value="0">0</button>
-          <button class="padrão" value=".">,</button>
-          <button class="padrão igual laranja igual">=</button>
+          <button class="default-key zero" value="0">0</button>
+          <button class="default-key" value=".">.</button>
+          <button class="default-key orange-button to-execute">=</button>
         </div>
       </main>
     </div>
